--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   connectivity_plus: ^6.1.4
   app_settings: ^6.1.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
