--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   connectivity_plus: ^6.1.4
   app_settings: ^6.1.1
   equatable: ^2.0.7
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
